--- a/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -11,7 +11,7 @@
         <item
             android:id="@+id/nav_add"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Adicionar" />
+            android:title="Adicionar Documento" />
 
     </group>
 
