--- a/app/src/main/res/layout/activity_nova_conta.xml
+++ b/app/src/main/res/layout/activity_nova_conta.xml
@@ -68,12 +68,12 @@
         android:id="@+id/etSenha"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="3dp"
+        android:layout_marginEnd="24dp"
         android:ems="10"
         android:hint="  Senha"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="@+id/imageView6"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/imageView6"
@@ -83,12 +83,12 @@
         android:id="@+id/etConfSenha"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="3dp"
+        android:layout_marginEnd="24dp"
         android:ems="10"
         android:hint="  Confirmar Senha"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="@+id/imageView6"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/imageView6"
