--- a/app/src/main/res/layout/nav_header_navigation.xml
+++ b/app/src/main/res/layout/nav_header_navigation.xml
@@ -21,6 +21,7 @@
         app:srcCompat="@drawable/icon" />
 
     <TextView
+        android:id="@+id/etTitulo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
@@ -29,7 +30,7 @@
         android:textSize="18sp" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/etSubtitulo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Todos os seus documentos na palma da mão."
