--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -4,6 +4,6 @@
     <item
         android:id="@+id/action_sair"
         android:orderInCategory="100"
-        android:title="Sair"
+        android:title="Sair desta conta"
         app:showAsAction="never" />
 </menu>
