Alteração nos nomes de alguns métodos; Função de abrir Fragments correspondentes aos botões implementada, tanto no Drawer, quanto no menu principal. Criação das animações de transição; Mudanças básicas no design

--- a/app/src/main/res/layout/fragment_menu_principal.xml
+++ b/app/src/main/res/layout/fragment_menu_principal.xml
@@ -4,17 +4,234 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fundo_mbl"
     tools:context=".view.fragment.FragmentMenuPrincipal">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="wrap_content"
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/constraintLayout2"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Menu Principal"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@drawable/barra"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="0dp"
+            android:layout_height="95dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/icon" />
+    </android.support.constraint.ConstraintLayout>
+
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginStart="2dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/btReservista"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/icon_reservisto"
+                app:layout_constraintEnd_toEndOf="@+id/btCNH"
+                app:layout_constraintStart_toStartOf="@+id/btCNH"
+                app:layout_constraintTop_toBottomOf="@+id/tvCNH" />
+
+            <TextView
+                android:id="@+id/tvReservista"
+                android:layout_width="144dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:text="Certificado de Dispensa/Reservisto"
+                android:textAlignment="center"
+                android:textColor="@android:color/background_light"
+                android:textSize="15sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/btReservista"
+                app:layout_constraintStart_toStartOf="@+id/btReservista"
+                app:layout_constraintTop_toBottomOf="@+id/btReservista" />
+
+            <Button
+                android:id="@+id/btOutros"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/icon_outros"
+                app:layout_constraintEnd_toEndOf="@+id/btCTPS"
+                app:layout_constraintStart_toStartOf="@+id/btCTPS"
+                app:layout_constraintTop_toBottomOf="@+id/tvCTPS" />
+
+            <TextView
+                android:id="@+id/tvOutros"
+                android:layout_width="114dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:text="Outros Documentos"
+                android:textAlignment="center"
+                android:textColor="@android:color/background_light"
+                android:textSize="15sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/btOutros"
+                app:layout_constraintHorizontal_bias="0.489"
+                app:layout_constraintStart_toStartOf="@+id/btOutros"
+                app:layout_constraintTop_toBottomOf="@+id/btOutros" />
+
+            <Button
+                android:id="@+id/btCNH"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/icon_cnh"
+                app:layout_constraintEnd_toEndOf="@+id/btTitulo"
+                app:layout_constraintStart_toStartOf="@+id/btTitulo"
+                app:layout_constraintTop_toBottomOf="@+id/tvTitulo" />
+
+            <TextView
+                android:id="@+id/tvCNH"
+                android:layout_width="113dp"
+                android:layout_height="wrap_content"
+                android:text="Carteira Nacional de Habilitação"
+                android:textAlignment="center"
+                android:textColor="@android:color/background_light"
+                android:textSize="15sp"
+                app:layout_constraintEnd_toEndOf="@+id/btCNH"
+                app:layout_constraintStart_toStartOf="@+id/btCNH"
+                app:layout_constraintTop_toBottomOf="@+id/btCNH" />
+
+            <Button
+                android:id="@+id/btCTPS"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/icon_ctps"
+                app:layout_constraintEnd_toEndOf="@+id/btCPF"
+                app:layout_constraintStart_toStartOf="@+id/btCPF"
+                app:layout_constraintTop_toBottomOf="@+id/tvCPF" />
+
+            <TextView
+                android:id="@+id/tvCTPS"
+                android:layout_width="137dp"
+                android:layout_height="wrap_content"
+                android:text="Carteira de Trabalho e Previdência Social"
+                android:textAlignment="center"
+                android:textColor="@android:color/background_light"
+                android:textSize="15sp"
+                app:layout_constraintEnd_toEndOf="@+id/btCTPS"
+                app:layout_constraintStart_toStartOf="@+id/btCTPS"
+                app:layout_constraintTop_toBottomOf="@+id/btCTPS" />
+
+            <Button
+                android:id="@+id/btTitulo"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/icon_titulo"
+                app:layout_constraintEnd_toEndOf="@+id/btCertidao"
+                app:layout_constraintHorizontal_bias="0.504"
+                app:layout_constraintStart_toStartOf="@+id/btCertidao"
+                app:layout_constraintTop_toBottomOf="@+id/tvCertidao" />
+
+            <TextView
+                android:id="@+id/tvTitulo"
+                android:layout_width="91dp"
+                android:layout_height="wrap_content"
+                android:text="Título de Eleitor"
+                android:textAlignment="center"
+                android:textColor="@android:color/background_light"
+                android:textSize="15sp"
+                app:layout_constraintEnd_toEndOf="@+id/btTitulo"
+                app:layout_constraintStart_toStartOf="@+id/btTitulo"
+                app:layout_constraintTop_toBottomOf="@+id/btTitulo" />
+
+            <Button
+                android:id="@+id/btCPF"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/icon_cpf"
+                app:layout_constraintEnd_toEndOf="@+id/btRG"
+                app:layout_constraintStart_toStartOf="@+id/btRG"
+                app:layout_constraintTop_toBottomOf="@+id/tvRG" />
+
+            <TextView
+                android:id="@+id/tvCPF"
+                android:layout_width="108dp"
+                android:layout_height="wrap_content"
+                android:text="Cadastro de Pessoa Física"
+                android:textAlignment="center"
+                android:textColor="@android:color/background_light"
+                android:textSize="15sp"
+                app:layout_constraintEnd_toEndOf="@+id/btCPF"
+                app:layout_constraintStart_toStartOf="@+id/btCPF"
+                app:layout_constraintTop_toBottomOf="@+id/btCPF" />
+
+            <Button
+                android:id="@+id/btCertidao"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/icon_certidao"
+                app:layout_constraintEnd_toStartOf="@+id/btRG"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/btRG"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/icon_rg"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/btCertidao"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tvCertidao"
+                android:layout_width="102dp"
+                android:layout_height="wrap_content"
+                android:text="Certidão de Nascimento"
+                android:textAlignment="center"
+                android:textColor="@android:color/background_light"
+                android:textSize="15sp"
+                app:layout_constraintEnd_toEndOf="@+id/btCertidao"
+                app:layout_constraintStart_toStartOf="@+id/btCertidao"
+                app:layout_constraintTop_toBottomOf="@+id/btCertidao" />
+
+            <TextView
+                android:id="@+id/tvRG"
+                android:layout_width="101dp"
+                android:layout_height="wrap_content"
+                android:text="Carteira de Identidade"
+                android:textAlignment="center"
+                android:textColor="@android:color/background_light"
+                android:textSize="15sp"
+                app:layout_constraintEnd_toEndOf="@+id/btRG"
+                app:layout_constraintStart_toStartOf="@+id/btRG"
+                app:layout_constraintTop_toBottomOf="@+id/btRG" />
+
+        </android.support.constraint.ConstraintLayout>
+    </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
