--- a/app/src/main/res/layout/app_bar_navigation.xml
+++ b/app/src/main/res/layout/app_bar_navigation.xml
@@ -28,6 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@drawable/icon_add_plus" />
+        app:backgroundTint="@android:color/background_light"
+        app:srcCompat="@drawable/icon_add_plus_g" />
 
 </android.support.design.widget.CoordinatorLayout>
