Foram implentados métodos de inserção, atualização e deleção dos documentos. Método de verificação no banco para saber se possui documento. Recuperação dos dados do CPF. Implementação de PIN como segundo meio de segurança, método "verificarSePossuiPIN()" e AlertDialog para inserção. Tabela CNH recebeu a coluna "observacao_cnh" Fragment CPF recebeu ajustes e os EditTexts com máscara, além dos botões "Editar" e "Excluir", que já estão funcionando. Ajustada a orientação da tela, não sendo possível rotacionar a fim de não distorcer o Layout. Foi adicionado ao AndroidMaifest a configuração para não distorção do layout ao exibir teclado virtual. Criada classe de Criptografia Base64 Criada nova fragment para cadastro, a partir de então será feita uma fragment de cadastro e outra de exibição Foi criado o shape personalizado para os botões de Edição e Exclusão

--- a/app/src/main/res/layout/fragment_cnh.xml
+++ b/app/src/main/res/layout/fragment_cnh.xml
@@ -6,15 +6,39 @@
     android:layout_height="match_parent"
     tools:context=".view.fragment.FragmentMenuPrincipal">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="CNH"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/imageView7"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:src="@drawable/mask_cnh_ac"
+                app:layout_constraintBottom_toTopOf="@+id/imageView8"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/imageView8"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:src="@drawable/mask_cnh_v"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView7" />
+        </android.support.constraint.ConstraintLayout>
+    </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
