--- a/app/src/main/res/layout/fragment_cpf_cad.xml
+++ b/app/src/main/res/layout/fragment_cpf_cad.xml
@@ -19,10 +19,13 @@
 
             <TextView
                 android:id="@+id/textView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="33dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="64dp"
+                android:layout_marginEnd="16dp"
                 android:text="Cadastrando CPF"
+                android:textAlignment="center"
                 android:textColor="@android:color/background_dark"
                 android:textSize="24sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -62,8 +65,8 @@
                 android:id="@+id/btCadCPF"
                 android:layout_width="157dp"
                 android:layout_height="36dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginBottom="32dp"
                 android:background="@drawable/botao_cadastrar"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
